implement simple meaningfull prediction
