# pkg/api/v1/predictor.pb.gw.go
@@ -28,8 +28,8 @@ var _ status.Status
 var _ = runtime.String
 var _ = utilities.NewDoubleArray
 
-func request_PredictorService_FindCardByBirthday_0(ctx context.Context, marshaler runtime.Marshaler, client PredictorServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CardRequest
+func request_PredictorService_GetGeneralPrediction_0(ctx context.Context, marshaler runtime.Marshaler, client PredictorServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GeneralRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -40,7 +40,7 @@ func request_PredictorService_FindCardByBirthday_0(ctx context.Context, marshale
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.FindCardByBirthday(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GetGeneralPrediction(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
@@ -83,7 +83,7 @@ func RegisterPredictorServiceHandler(ctx context.Context, mux *runtime.ServeMux,
 // "PredictorServiceClient" to call the correct interceptors.
 func RegisterPredictorServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client PredictorServiceClient) error {
 
-	mux.Handle("POST", pattern_PredictorService_FindCardByBirthday_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_PredictorService_GetGeneralPrediction_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -92,14 +92,14 @@ func RegisterPredictorServiceHandlerClient(ctx context.Context, mux *runtime.Ser
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_PredictorService_FindCardByBirthday_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_PredictorService_GetGeneralPrediction_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_PredictorService_FindCardByBirthday_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_PredictorService_GetGeneralPrediction_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -107,9 +107,9 @@ func RegisterPredictorServiceHandlerClient(ctx context.Context, mux *runtime.Ser
 }
 
 var (
-	pattern_PredictorService_FindCardByBirthday_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "card"}, ""))
+	pattern_PredictorService_GetGeneralPrediction_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "predict"}, ""))
 )
 
 var (
-	forward_PredictorService_FindCardByBirthday_0 = runtime.ForwardResponseMessage
+	forward_PredictorService_GetGeneralPrediction_0 = runtime.ForwardResponseMessage
 )
